- 
    Bug 
- 
    Resolution: Done
- 
    P4: Low 
- 
    5.15.0
- 
    None
- 
    Ubuntu+Wine
- 
        
- 
        beb3916858dcf5fa2fe0d9d98013fa8190497826 (qt/qtbase/dev) 9033002778caafcd7fb4647c34a45b5bafc5f5d3 (qt/qtbase/5.15)
Qt crashes in qwindows.dll. QWindowTheme::instance() is null when refreshFonts() is called. Looks like here https://github.com/qt/qtbase/blob/dev/src/plugins/platforms/windows/qwindowsscreen.cpp#L572
- is duplicated by
- 
                    QTBUG-85920 QWindowsScreenManager::handleScreenChanges crashes when WindowsTheme is not used -         
- Closed
 
-